@@ -1,5 +1,6 @@
 import dectate
 from reg import CachingKeyLookup, Registry
+from dectate import ConfigError
 
 from .request import Request
 from . import compat
@@ -57,7 +58,9 @@ class App(dectate.App):
     logger_name = 'morepath.directive'
 
     def __init__(self):
-        pass
+        if not self.is_committed():
+            raise ConfigError(
+                "App subclass cannot be instantiated as it was not committed.")
 
     @reify
     def lookup(self):
